cursor alignment fix

--- a/lets-talk-client/src/index.css
+++ b/lets-talk-client/src/index.css
@@ -1,30 +1,25 @@
 /* Globals */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap");
 
 :root {
-  --color-primary-bg:pink;
+  --color-primary-bg: pink;
   --color-primary-font: black;
   --color-primary-accent: #101010;
-  --color-primary-accent: #FFFFFF;
+  --color-primary-accent: #ffffff;
 }
 
 body {
   margin: 0;
   box-sizing: border-box;
   height: 100%;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-
-span {
-    margin-right: 5px;
 }
 
 .btn {
