--- a/lets-talk-client/src/styles/Hero.css
+++ b/lets-talk-client/src/styles/Hero.css
@@ -1,30 +1,30 @@
 .hero {
-    box-sizing: border-box;
-    margin: 0 auto;
-    min-height: 90vh;
-    padding-top: 5em;
-    width: 60vw;
-    display: flex;
-    flex-direction: column;
+  box-sizing: border-box;
+  margin: 0 auto;
+  min-height: 90vh;
+  padding-top: 5em;
+  width: 60vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero-title {
-    font-size: 3em;
-    font-weight: 400;
-    margin-bottom: 20px;
-    letter-spacing: .1em;
+  font-size: 3em;
+  font-weight: 400;
+  margin-bottom: 20px;
+  letter-spacing: 0.1em;
 }
 
 .Typewriter__cursor {
-    color: orange;
+  color: orange;
 }
 
 .theme-dark {
-    caret-color: orange;
-    color: white;
+  caret-color: orange;
+  color: white;
 }
 
 .theme-light {
-    caret-color: blue;
-    color: black;
+  caret-color: blue;
+  color: black;
 }
